--- a/package.json
+++ b/package.json
@@ -33,35 +33,35 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
-		"@astrojs/rss": "4.0.1",
-		"astro": "4.0.8",
-		"astro-font": "^0.0.72"
+		"@astrojs/rss": "4.0.14",
+		"astro": "5.16.3",
+		"astro-font": "1.1.0"
 	},
 	"devDependencies": {
-		"@astrojs/mdx": "2.0.3",
-		"@astrojs/sitemap": "3.0.4",
-		"@astrojs/tailwind": "5.1.0",
-		"@pagefind/default-ui": "^1.0.4",
+		"@astrojs/mdx": "4.3.12",
+		"@astrojs/sitemap": "3.6.0",
+		"@astrojs/tailwind": "6.0.2",
+		"@pagefind/default-ui": "^1.4.0",
 		"@tailwindcss/typography": "0.5.10",
-		"@tinacms/cli": "^1.5.30",
+		"@tinacms/cli": "^1.12.6",
 		"@typescript-eslint/parser": "^6.16.0",
 		"clsx": "2.0.0",
 		"eslint": "^8.56.0",
-		"eslint-plugin-astro": "^0.31.0",
+		"eslint-plugin-astro": "^0.31.4",
 		"eslint-plugin-jsx-a11y": "^6.8.0",
-		"husky": "^8.0.3",
-		"lint-staged": "^15.2.0",
+		"husky": "^9.1.7",
+		"lint-staged": "^16.2.7",
 		"mdast-util-to-string": "^4.0.0",
-		"motion": "^10.16.4",
-		"pagefind": "^1.0.3",
-		"prettier": "^3.0.3",
+		"motion": "^12.23.24",
+		"pagefind": "^1.4.0",
+		"prettier": "^3.7.3",
 		"prettier-config-standard": "^7.0.0",
-		"prettier-plugin-astro": "^0.12.0",
+		"prettier-plugin-astro": "^0.12.3",
 		"reading-time": "^1.5.0",
 		"slugify": "^1.6.6",
-		"tailwind-merge": "2.0.0",
+		"tailwind-merge": "3.4.0",
 		"tailwindcss": "3.3.5",
-		"tinacms": "^1.5.21",
+		"tinacms": "^2.10.1",
 		"typescript": "^5.2.2"
 	},
 	"lint-staged": {
