--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
 	},
 	"dependencies": {
 		"@astrojs/rss": "4.0.14",
+		"@fancyapps/ui": "^6.1.6",
 		"astro": "5.16.3",
-		"astro-font": "1.1.0"
+		"astro-font": "1.1.0",
+		"rehype-katex": "^7.0.1",
+		"remark-math": "^6.0.0"
 	},
 	"devDependencies": {
 		"@astrojs/mdx": "4.3.12",
